Revert "Disable VPN tunnel encryption"
This reverts commit 03f0851ae7421f543c2a99182b00238458555595.

--- a/ansible_scripts/vpNator.yml
+++ b/ansible_scripts/vpNator.yml
@@ -211,7 +211,7 @@
           become: true
           become_method: sudo
           command:
-            cmd: "/usr/sbin/openvpn --config /etc/openvpn/server.conf --daemon --comp-lzo no"
+            cmd: "/usr/sbin/openvpn --config /etc/openvpn/server.conf --daemon"
             chdir: /etc/openvpn
           #command: systemctl restart openvpn
           #@server.service)
